examples/negative/read_undefined_variable.nv
fn main() : void {
    let b : int = a;
    return;
}